Fix alignment of errors

--- a/less/Vetrina.less
+++ b/less/Vetrina.less
@@ -170,6 +170,8 @@
 
 .vetrina--completed-close {
     justify-self: center;
+    grid-area: beef;
+    margin-bottom: 2em;
 }
 
 .vetrina--description-text {
@@ -279,6 +281,8 @@
 	margin-left: -@vetrina-content-to-small-margin;
 	margin-right: -@vetrina-content-to-small-margin;
     }
+
+    margin-top: 2em;
     grid-area: product;
     display: grid;
     background: @grey-almostlight;
@@ -362,4 +366,8 @@
     background-size: 20px;
     background-image: url('../images/check-circle.svg');
     grid-area: check;
+}
+
+.vetrina--create-account {
+    margin-top: 2em;
 }
